force-app/main/default/objects/Itinerary_Days__c/Itinerary_Days__c.object-meta.xml
<CustomObject>
    <label>Itinerary Days</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itinerary Days</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>