force-app/main/default/objects/Itinerary_Days__c/fields/Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Accommodation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accommodation</label>
    <referenceTo>Accommodation__c</referenceTo>
    <relationshipLabel>Itinerary Days</relationshipLabel>
    <relationshipName>Itinerary_Days</relationshipName>
    <type>Lookup</type>
</CustomField>