force-app/main/default/objects/Itinerary_Days__c/fields/Itinerary__c.field-meta.xml
<CustomField>
    <fullName>Itinerary__c</fullName>
    <label>Itinerary</label>
    <referenceTo>Itinerary__c</referenceTo>
    <relationshipLabel>Itinerary Days</relationshipLabel>
    <relationshipName>Itinerary_Days</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>